--- a/src/app.json
+++ b/src/app.json
@@ -14,8 +14,8 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Wechat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#0089ef",
+    "navigationBarTitleText": "在线智能问诊",
+    "navigationBarTextStyle":"white"
   }
 }
