--- a/src/app.json
+++ b/src/app.json
@@ -20,7 +20,7 @@
       "iconPath": "images/guahao1.png",
       "selectedIconPath": "images/guahao.png",
       "pagePath": "pages/index/index",
-      "text": "挂号"
+      "text": "功能"
     }, {
       "iconPath": "images/mine.png",
       "selectedIconPath": "images/mine-selected.png",
