--- a/src/app.json
+++ b/src/app.json
@@ -31,7 +31,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#0089ef",
-    "navigationBarTitleText": "在线智能问诊",
+    "navigationBarTitleText": "虚云医馆-医生端",
     "navigationBarTextStyle":"white"
   }
 }
